Fixes button alignment / padding in file open dialogs, see JEP-123

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -534,6 +534,7 @@ GtkComboBoxText GtkToggleButton.button,
 	color: @theme_text_color;
 	border-style: solid;
 	border-color: transparent;
+	padding: 3px 4px 3px 4px;
 }
 
 /* We want anything inside the buttons to use their background */
